# rustgraphics

./: .gitattributes  .gitignore  Cargo.toml  README.md  todo.txt
.github/workflows/: build.yml  rust.yml
game/: Cargo.toml  build.rs
game/models/: bugatticlean.mtl  monkeyhp.mtl  monkeylp.mtl  untitled.mtl
game/src/: main.rs
game/src/drawable/mesh/: arraymesh.rs  mod.rs
game/src/drawable/shader/: arrayshader.rs  mod.rs
game/src/drawable/shader/glsl/array_shader/: vertex_shader.glsl
game/src/drawable/shader/glsl/vertex/: array_shader.glsl
glengine/: Cargo.toml
glengine-mdl/: Cargo.toml
glengine-mdl/src/: models.rs
glengine/src/: build_utils.rs
glengine/src/engine/: config.rs  events.rs  fbo.rs  mod.rs  physics.rs  timedelta.rs  transform.rs
glengine/src/engine/drawable/: base.rs  manager.rs  material.rs  mod.rs
glengine/src/engine/drawable/importer/: assimp.rs  img.rs  nmdl.rs
glengine/src/engine/drawable/material/: manager.rs  mod.rs
glengine/src/engine/drawable/mesh/: collider.rs  cube.rs  manager.rs  mod.rs  screenquad.rs
glengine/src/engine/drawable/shader/: lit.rs  manager.rs  mod.rs  unlit.rs
glengine/src/engine/drawable/shader/glsl/lit/basic/: fragment_shader.glsl
glengine/src/engine/scene/: camera.rs  mod.rs
glengine/src/engine/scene/gameobject/: base.rs  mod.rs
glengine/src/engine/scene/gameobject/components/: collider.rs  drawable.rs  freecam.rs  mod.rs  rigidbody.rs  rotating.rs
glengine/src/engine/scene/lights/: directional.rs  mod.rs  point.rs  spot.rs
htmlReport/: game run Coverage Results.lcov
src/: build_utils.rs  error.rs  lib.rs  main.rs  result.rs
src/drawable/: cube.rs  mod.rs  transform.rs
src/drawable/mesh/: cube.rs  mod.rs
src/engine/: camera.rs  config.rs  events.rs  fbo.rs  fps.rs  fpscounter.rs  gameobject.rs  mod.rs  timedelta.rs  transform.rs
src/engine/components/: mod.rs
src/engine/drawable/: base.rs  cube.rs  material.rs  mod.rs
src/engine/drawable/importer/: assimp.rs  img.rs  mod.rs  nmdl.rs  obj.rs
src/engine/drawable/mesh/: bounding.rs  collider.rs  cube.rs  mod.rs  model.rs  screenquad.rs
src/engine/drawable/shader/: color.rs  lit.rs  mod.rs  unlit.rs
src/engine/drawable/shader/glsl/basic/: vertex_shader.glsl
src/engine/drawable/shader/glsl/face/: geometry_shader.glsl  vertex_shader.glsl
src/engine/drawable/shader/glsl/lit/basic/: fragment_shader.glsl  vertex_shader.glsl
src/engine/drawable/shader/glsl/lit/color/: fragment_shader.glsl  geometry_shader.glsl  vertex_shader.glsl
src/engine/drawable/shader/glsl/quad/: fragment_shader.glsl
src/engine/drawable/shader/glsl/screen/: fragment_shader.glsl  vertex_shader.glsl
src/engine/drawable/shader/glsl/unlit/basic/: fragment_shader.glsl  vertex_shader.glsl
src/engine/drawable/shader/glsl/unlit/color/: fragment_shader.glsl
src/engine/drawable/shader/glsl/unlit/face/: fragment_shader.glsl  geometry_shader.glsl  vertex_shader.glsl
src/engine/scene/: camera.rs  gameobject.rs  mod.rs
src/engine/scene/gameobject/: base.rs  mod.rs  rotating.rs
src/engine/scene/gameobject/components/: drawable.rs  freecam.rs  mod.rs  rotating.rs
src/engine/scene/lights/: directional.rs  mod.rs  point.rs  spot.rs
src/engine/shader/: mod.rs
src/engine/shader/glsl/basic/: fragment_shader.glsl
src/engine/shader/glsl/vertex/: vertex_shader.glsl
src/shader/: fragment_shader.glsl  mod.rs  vertex_shader.glsl
