[package]
name = "glengine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glfw = "0.55.0"
glam = "0.27.0"
lazy_static = "1.4.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tobj = { git = "https://github.com/Twinklebear/tobj", branch = "master" }
thiserror = "1.0.61"
image = "0.25.1"
russimp = { version = "3.2.0", features = ["prebuilt"] }

[lib]
crate-type = ["lib"]