[package]
name = "glengine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glsl-layout = "0.5.0"
glfw = "0.56.0"
glam = "0.27.0"
lazy_static = "1.4.0"
once_cell = "1.20.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tobj = { git = "https://github.com/Twinklebear/tobj", branch = "master" }
thiserror = "1.0.61"
image = "0.25.1"
russimp = { version = "3.2.0", features = ["prebuilt"] }
indexmap = "2.2.6"
#rapier3d = "0.19.0" #TODO: Use for physics
#openvr = "0.6.0"

[lib]
crate-type = ["lib"]