[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.1"
glengine = { path = "../glengine"}
glengine-mdl = { path = "../glengine-mdl"}

[build-dependencies]
glengine = { path = "../glengine"}
syn = { version="2.0.82",features = ["visit"] }
glob = "0.3.1"