[package]
name = "glengine-mdl"
version = "0.1.0"
edition = "2021"

[dependencies]
russimp = { version = "3.2.0", features = ["prebuilt"] }
bincode = "2.0.0-rc.3"
image = "0.25.4"
#rand = "0.9.0-alpha.1"
#glengine = { path = "../"}

[build-dependencies]
#glengine = { path = "../"}

[lib]
crate-type = ["lib"]