[package]
name = "glengine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glsl-layout = { version="0.5.0" }
glfw = "0.58.0"
glam.workspace=true
nalgebra.workspace = true
lazy_static = "1.4.0"
once_cell = "1.20.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
image.workspace = true
glob = "0.3.1"
glengine-mdl = {path="../glengine-mdl"}
russimp.workspace = true
rapier3d.workspace=true
#openvr = "0.6.0"

[lib]
crate-type = ["lib"]