[package]
name = "glengine"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "0.14.0"
glsl-layout = { version="0.5.0" }
glfw = "0.58.0"
once_cell = "1.20.2"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
glob = "0.3.1"
glengine-mdl = {path="../glengine-mdl"}

image.workspace = true
glam.workspace=true
nalgebra.workspace = true
russimp.workspace = true
rapier3d.workspace=true
#openvr = "0.6.0"

[lib]
crate-type = ["lib"]